--- a/inventory-system/build.gradle
+++ b/inventory-system/build.gradle
@@ -13,10 +13,11 @@ sourceCompatibility = '1.8'
 repositories {
 	mavenCentral()
 
-	maven {
-		url 'http://jaspersoft.artifactoryonline.com/jaspersoft/third-party-ce-artifacts/'
-		allowInsecureProtocol = true
-	}
+		maven{url "http://jasperreports.sourceforge.net/maven2/"
+			allowInsecureProtocol = true}
+		maven{url "http://jaspersoft.artifactoryonline.com/jaspersoft/third-party-ce-artifacts/"
+			allowInsecureProtocol = true}
+
 }
 
 
@@ -29,18 +30,17 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
 
-	//implementation 'net.sf.jasperreports:jasperreports:6.1.0'
 
 	implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.6'
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
 
-	//implementation group: 'net.sf.jasperreports', name: 'jasperreports', version: '5.2.0'
+	implementation group: 'net.sf.jasperreports', name: 'jasperreports', version: '6.2.2'
+	implementation group: 'org.olap4j', name: 'olap4j', version: '1.2.0'
+	implementation group: 'com.lowagie', name: 'itext', version: '2.1.7'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
-
-
 
 dependencyManagement {
 	imports {
